rstsr-aocl-ffi/header/blis.h

		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;
typedef char      f77_char;
#define cgemm                     CGEMM
#define cgemm3m                   CGEMM3M
#define cgemmt                    CGEMMT
#define chbmv                     CHBMV
#define ctrmm                     CTRMM
#define ctrsm                     CTRSM
#define dgemm                     DGEMM
#define dgemmt                    DGEMMT
#define dtrmm                     DTRMM
#define dtrsm                     DTRSM
#define sgemm                     SGEMM
#define sgemmt                    SGEMMT
#define strmm                     STRMM
#define strsm                     STRSM
#define zgemm                     ZGEMM
#define zgemm3m                   ZGEMM3M
#define zgemmt                    ZGEMMT
#define zhbmv                     ZHBMV
#define ztrsm                     ZTRSM
BLIS_EXPORT_BLIS void chbmv(const char   *uplo, const f77_int *n, const f77_int *k, const scomplex  *alpha, const scomplex  *a, const f77_int *lda, const scomplex  *x, const f77_int *incx, const scomplex  *beta, scomplex  *y, const f77_int *incy);
BLIS_EXPORT_BLIS void zhbmv(const char   *uplo, const f77_int *n, const f77_int *k, const dcomplex *alpha, const dcomplex *a, const f77_int *lda, const dcomplex *x, const f77_int *incx, const dcomplex *beta, dcomplex *y, const f77_int *incy);
BLIS_EXPORT_BLIS void sgemm(const char   *transa, const char   *transb, const f77_int *m, const f77_int *n, const f77_int *k, const float  *alpha, const float  *a, const f77_int *lda, const float  *b, const f77_int *ldb, const float  *beta, float  *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void strmm(const char   *side, const char   *uplo, const char   *transa, const char   *diag, const f77_int *m, const f77_int *n, const float  *alpha, const float  *a, const f77_int *lda, float  *b, const f77_int *ldb);
BLIS_EXPORT_BLIS void strsm(const char   *side, const char   *uplo, const char   *transa, const char   *diag, const f77_int *m, const f77_int *n, const float  *alpha, const float  *a, const f77_int *lda, float  *b, const f77_int *ldb);
BLIS_EXPORT_BLIS void dgemm(const char   *transa, const char   *transb, const f77_int *m, const f77_int *n, const f77_int *k, const double *alpha, const double *a, const f77_int *lda, const double *b, const f77_int *ldb, const double *beta, double *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void dtrmm(const char   *side, const char   *uplo, const char   *transa, const char   *diag, const f77_int *m, const f77_int *n, const double *alpha, const double *a, const f77_int *lda, double *b, const f77_int *ldb);
BLIS_EXPORT_BLIS void dtrsm(const char   *side, const char   *uplo, const char   *transa, const char   *diag, const f77_int *m, const f77_int *n, const double *alpha, const double *a, const f77_int *lda, double *b, const f77_int *ldb);
BLIS_EXPORT_BLIS void cgemm(const char   *transa, const char   *transb, const f77_int *m, const f77_int *n, const f77_int *k, const scomplex  *alpha, const scomplex  *a, const f77_int *lda, const scomplex  *b, const f77_int *ldb, const scomplex  *beta, scomplex  *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void ctrmm(const char   *side, const char   *uplo, const char   *transa, const char   *diag, const f77_int *m, const f77_int *n, const scomplex  *alpha, const scomplex  *a, const f77_int *lda, scomplex  *b, const f77_int *ldb);
BLIS_EXPORT_BLIS void ctrsm(const char   *side, const char   *uplo, const char   *transa, const char   *diag, const f77_int *m, const f77_int *n, const scomplex  *alpha, const scomplex  *a, const f77_int *lda, scomplex  *b, const f77_int *ldb);
BLIS_EXPORT_BLIS void zgemm(const char   *transa, const char   *transb, const f77_int *m, const f77_int *n, const f77_int *k, const dcomplex *alpha, const dcomplex *a, const f77_int *lda, const dcomplex *b, const f77_int *ldb, const dcomplex *beta, dcomplex *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void ztrsm(const char   *side, const char   *uplo, const char   *transa, const char   *diag, const f77_int *m, const f77_int *n, const dcomplex *alpha, const dcomplex *a, const f77_int *lda, dcomplex *b, const f77_int *ldb);
BLIS_EXPORT_BLIS void cgemm3m( const f77_char* transa,  const f77_char* transb,  const f77_int* m,  const f77_int* n,  const f77_int* k,  const scomplex* alpha,  const scomplex* a,  const f77_int* lda,  const scomplex* b,  const f77_int* ldb,  const scomplex* beta,  scomplex* c,  const f77_int* ldc);
BLIS_EXPORT_BLIS void cgemmt( const f77_char* uploc,  const f77_char* transa,  const f77_char* transb,  const f77_int* n,  const f77_int* k,  const  scomplex* alpha,  const scomplex* a,  const f77_int* lda,  const scomplex* b,  const f77_int* ldb,  const scomplex* beta,  scomplex* c,  const f77_int* ldc);
BLIS_EXPORT_BLIS void dgemmt( const f77_char* uploc,  const f77_char* transa,  const f77_char* transb,  const f77_int* n,  const f77_int* k,  const  double* alpha,  const double* a,  const f77_int* lda,  const double* b,  const f77_int* ldb,  const double* beta,  double* c,  const f77_int* ldc);
BLIS_EXPORT_BLIS void sgemmt( const f77_char* uploc,  const f77_char* transa,  const f77_char* transb,  const f77_int* n,  const f77_int* k,  const  float* alpha,  const float* a,  const f77_int* lda,  const float* b,  const f77_int* ldb,  const float* beta,  float* c,  const f77_int* ldc);
BLIS_EXPORT_BLIS void zgemm3m( const f77_char* transa,  const f77_char* transb,  const f77_int* m,  const f77_int* n,  const f77_int* k,  const dcomplex* alpha,  const dcomplex* a,  const f77_int* lda,  const dcomplex* b,  const f77_int* ldb,  const dcomplex* beta,  dcomplex* c,  const f77_int* ldc);
BLIS_EXPORT_BLIS void zgemmt( const f77_char* uploc,  const f77_char* transa,  const f77_char* transb,  const f77_int* n,  const f77_int* k,  const  dcomplex* alpha,  const dcomplex* a,  const f77_int* lda,  const dcomplex* b,  const f77_int* ldb,  const dcomplex* beta,  dcomplex* c,  const f77_int* ldc);
typedef int16_t bfloat16;
typedef int16_t bfloat16;
typedef int16_t bfloat16;
typedef int16_t bfloat16;
typedef int16_t bfloat16;
		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;
typedef char      f77_char;