rstsr-openblas-ffi/src/f77blas.rs

    pub fn zsbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut f64,
        arg11: *mut blas_int,
    );
    pub fn xsbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
        arg9: *mut xdouble,
        arg10: *mut xdouble,
        arg11: *mut blas_int,
    );
    pub fn chbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut f32,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut f32,
        arg11: *mut blas_int,
    );
    pub fn zhbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut f64,
        arg11: *mut blas_int,
    );
    pub fn xhbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
        arg9: *mut xdouble,
        arg10: *mut xdouble,
        arg11: *mut blas_int,
    );
    pub fn sbgemm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut bfloat16,
        arg8: *mut blas_int,
        arg9: *mut bfloat16,
        arg10: *mut blas_int,
        arg11: *mut f32,
        arg12: *mut f32,
        arg13: *mut blas_int,
    );
    pub fn sgemm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut blas_int,
        arg11: *mut f32,
        arg12: *mut f32,
        arg13: *mut blas_int,
    );
    pub fn dgemm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut blas_int,
        arg11: *mut f64,
        arg12: *mut f64,
        arg13: *mut blas_int,
    );
    pub fn qgemm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
        arg9: *mut xdouble,
        arg10: *mut blas_int,
        arg11: *mut xdouble,
        arg12: *mut xdouble,
        arg13: *mut blas_int,
    );
    pub fn cgemm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut blas_int,
        arg11: *mut f32,
        arg12: *mut f32,
        arg13: *mut blas_int,
    );
    pub fn zgemm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut blas_int,
        arg11: *mut f64,
        arg12: *mut f64,
        arg13: *mut blas_int,
    );
    pub fn xgemm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
        arg9: *mut xdouble,
        arg10: *mut blas_int,
        arg11: *mut xdouble,
        arg12: *mut xdouble,
        arg13: *mut blas_int,
    );
    pub fn cgemm3m(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut blas_int,
        arg11: *mut f32,
        arg12: *mut f32,
        arg13: *mut blas_int,
    );
    pub fn zgemm3m(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut blas_int,
        arg11: *mut f64,
        arg12: *mut f64,
        arg13: *mut blas_int,
    );
    pub fn xgemm3m(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
        arg9: *mut xdouble,
        arg10: *mut blas_int,
        arg11: *mut xdouble,
        arg12: *mut xdouble,
        arg13: *mut blas_int,
    );
    pub fn sgemmt(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut blas_int,
        arg11: *mut f32,
        arg12: *mut f32,
        arg13: *mut blas_int,
    );
    pub fn dgemmt(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut blas_int,
        arg11: *mut f64,
        arg12: *mut f64,
        arg13: *mut blas_int,
    );
    pub fn cgemmt(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut blas_int,
        arg11: *mut f32,
        arg12: *mut f32,
        arg13: *mut blas_int,
    );
    pub fn zgemmt(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut blas_int,
        arg11: *mut f64,
        arg12: *mut f64,
        arg13: *mut blas_int,
    );
    pub fn sge2mm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut blas_int,
        arg11: *mut f32,
        arg12: *mut f32,
        arg13: *mut blas_int,
    ) -> c_int;
    pub fn dge2mm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut blas_int,
        arg11: *mut f64,
        arg12: *mut f64,
        arg13: *mut blas_int,
    ) -> c_int;
    pub fn cge2mm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut blas_int,
        arg11: *mut f32,
        arg12: *mut f32,
        arg13: *mut blas_int,
    ) -> c_int;
    pub fn zge2mm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut blas_int,
        arg11: *mut f64,
        arg12: *mut f64,
        arg13: *mut blas_int,
    ) -> c_int;
    pub fn strsm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut c_char,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut f32,
        arg9: *mut blas_int,
        arg10: *mut f32,
        arg11: *mut blas_int,
    );
    pub fn dtrsm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut c_char,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut f64,
        arg9: *mut blas_int,
        arg10: *mut f64,
        arg11: *mut blas_int,
    );
    pub fn qtrsm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut c_char,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
        arg10: *mut xdouble,
        arg11: *mut blas_int,
    );
    pub fn ctrsm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut c_char,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut f32,
        arg9: *mut blas_int,
        arg10: *mut f32,
        arg11: *mut blas_int,
    );
    pub fn ztrsm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut c_char,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut f64,
        arg9: *mut blas_int,
        arg10: *mut f64,
        arg11: *mut blas_int,
    );
    pub fn xtrsm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut c_char,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
        arg10: *mut xdouble,
        arg11: *mut blas_int,
    );
    pub fn strmm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut c_char,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut f32,
        arg9: *mut blas_int,
        arg10: *mut f32,
        arg11: *mut blas_int,
    );
    pub fn dtrmm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut c_char,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut f64,
        arg9: *mut blas_int,
        arg10: *mut f64,
        arg11: *mut blas_int,
    );
    pub fn qtrmm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut c_char,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
        arg10: *mut xdouble,
        arg11: *mut blas_int,
    );
    pub fn ctrmm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut c_char,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut f32,
        arg9: *mut blas_int,
        arg10: *mut f32,
        arg11: *mut blas_int,
    );
